Algunos cambios y redirecciones

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
      <nav class="navbar">
     <div class="logo">CODEXIA</div>
     <ul class="nav-links">
+      <li><a href="#inicio">Inicio</a></li>
       <li><a href="#servicios">Quienes somos?</a></li>
       <li><a href="#portfolio">Proyectos</a></li>
       <li><a href="#contacto">Contactanos</a></li>
@@ -33,5 +34,18 @@
     <p class="subtitulo">Creamos experiencias web claras, accesibles y modernas.</p>
   </div>
 </header>
+<main>
+  <section id="servicios" class="pagina activa">
+    <h2>Quiénes somos</h2>
+  </section>
+  <section id="portfolio" class="pagina">
+    <h2>Proyectos</h2>
+  </section>
+  <section id="contacto" class="pagina">
+    <h2>Contacto</h2>
+  </section>
+</main>
+
+<script src="index.js"></script>
 </body>
 </html>
