--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 </header>
 <main>
   <section id="servicios" class="pagina activa">
-    <h2>Quiénes somos</h2>
+    <h2>Quiénes somos?</h2>
+    <p>Codexia es una empresa digital creada por dos desarrolladoras web apasionadas por la tecnología con el objetivo de crear sitios modernos, funcionales y creativos. <br>
+      Nos enfocamos en el diseño y programación web, combinando creatividad, buenas prácticas y atención al detalle para ofrecer soluciones claras y eficientes. <br>
+      Creemos en el aprendizaje continuo, la mejora constante y el trabajo en equipo como base para crecer profesionalmente y brindarle valor a cada proyecto. <br>
+      Nuestro compromiso es transformar ideas en experiencias digitales simples, atractivas y bien estructuradas.</p>
   </section>
   <section id="portfolio" class="pagina">
     <h2>Proyectos</h2>
